<resources>
    <string name="app_name">TK88 Calculator</string>
    <string name="so_0">0</string>
    <string name="so_1">1</string>
    <string name="so_2">2</string>
    <string name="so_3">3</string>
    <string name="so_4">4</string>
    <string name="so_5">5</string>
    <string name="so_6">6</string>
    <string name="so_7">7</string>
    <string name="so_8">8</string>
    <string name="so_9">9</string>
    <string name="AC">AC</string>
    <string name="C" >C</string>
    <string name="ket_qua">=</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="nhan">x</string>
    <string name="chia">/</string>
    <string name="phay">.</string>
    <string name="ngoac_trai">(</string>
    <string name="ngoac_phai">)</string>
</resources>
